*unreleased*

* Don't follow symlinks when using :copy_cache [Jamis Buck]

* If :mode is given to upload() helper, do a chmod after to set the mode [Jamis Buck]

* Fix load_from_file method for windows users [Neil Wilson]

* Display a deprecation error if a remote git branch is specified [Tim Harper]

* Fix deployment recipes to use the updated sudo helper [Jamis Buck]

* Enhance the sudo helper so it can be used to return the command, instead of executing it [Jamis Buck]

* Revert "make sudo helper play nicely with complex command chains", since it broke stuff [Jamis Buck]

* Make set(:default_shell, false) work for not using a shell on a per-command basis [Ryan McGeary] 

* Improved test coverage [Ryan McGeary]

* Fixed "coverage" take task [Ryan McGeary]

* Use upload() instead of put() with the copy strategy [Jamis Buck]

* Revert the "git fetch --tags" change, since it didn't work as expected [Jamis Buck]

* Fix deploy:pending when using git SCM [Ryan McGeary]

* Make sure deploy:check works with :none scm (which has no default command) [Jamis Buck]

* Add debug switch for enabling conditional execution of commands [Mark Imbriaco]


*2.3.0* May 2, 2008

* Make deploy:setup obey the :use_sudo and :runner directives, and generalize the :use_sudo and :runner options into a try_sudo() helper method [Jamis Buck]

* Make sudo helper play nicely with complex command chains [Jamis Buck]

* Expand file-transfer options with new upload() and download() helpers. [Jamis Buck]

* Allow SCP transfers in addition to SFTP. [Jamis Buck]

* Use Net::SSH v2 and Net::SSH::Gateway. [Jamis Buck]

* Added #export method for git SCM [Phillip Goldenburg]

* For query_revision, git SCM used git-rev-parse on the repo hosting the Capfile, which may NOT be the same tree as the actual source reposistory. Use git-ls-remote instead to resolve the revision for checkout. [Robin H. Johnson]

* Allow :ssh_options hash to be specified per server [Jesse Newland]
