@@ -1,5 +1,7 @@
 *unreleased*
 
+* Make git SCM honor the :scm_verbose option [Jamis Buck]
+
 * Don't follow symlinks when using :copy_cache [Jamis Buck]
 
 * If :mode is given to upload() helper, do a chmod after to set the mode [Jamis Buck]
